--- a/src/styles/top_bar.css
+++ b/src/styles/top_bar.css
@@ -2,9 +2,10 @@
 #top_bar_container .dropdown:hover > .dropdown_menu { visibility: visible; }
 #top_bar_container .dropdown .dropdown_menu { visibility: hidden; position: relative; background-color: lightgray; z-index: 100; }
 #top_bar_container .dropdown .dropdown_menu .dropdown_menu_option:hover { background-color:gray; }
-#processing_gui_container #processing_gui { width: 200px; background-color: lightgoldenrodyellow; margin:auto; z-index: 105; display: flex; align-content: center; justify-content: center; padding: 10px; visibility: hidden; }
-#processing_gui_container #processing_gui #close_processing_gui { display: flex; position: absolute; left: 540px; top: auto; margin-top: -10px; }
+#processing_gui_container #processing_gui { width: 200px; background-color: lightgoldenrodyellow; margin:auto; z-index: 105; display: flex; flex-direction: column; align-content: center; justify-content: center; padding: 10px; visibility: hidden; }
+#processing_gui_container #processing_gui #close_processing_gui { margin-top:-10px; margin-left: 185px;  }
 #processing_gui_container #processing_gui #close_processing_gui:hover { cursor: pointer; }
+#processing_gui_container #processing_gui #processing_gui_actions { background-color: lightgreen; padding:10px; }
 #processing_gui_container #processing_gui .inner_gui { background-color: lightsalmon; width: 100%; margin: 0px; }
 
 
