--- a/src/styles/page.css
+++ b/src/styles/page.css
@@ -2,8 +2,13 @@ html * { font-family: Arial, sans-serif; }
 #processing_gui_container { position: absolute; width: 900px; height: 700px; margin-left: 200px; margin-top: 50px; text-align: center; display: flex; justify-content: center; align-content: center; }
 #top_bar_container { width:900px; height: 50px; margin-left:200px; background-color: lightblue; }
 #layer_container { float:left; width:200px; height: 750px; margin-top:-50px; background-color:lightgreen; }
-#page_container { position:relative; width: 900px; height: 700px; margin-left:200px;}
-#page_container #tile_container { width: 900px; height: 700px; z-index: 10; }
-#page_container #tile_container .layer_object canvas { z-index: 10; opacity:0; }
-#page_container #canvas_container { position:absolute; width: 900px; height: 700px;  top:0px; z-index:0;  }
-#page_container #canvas_container #canvas_map { width: 900px; height: 700px; }
+#map_container { position:relative; display: flex; width: 900px; height: 700px; }
+/* change width, height and margin values according to how much of a buffer we want around the viewport */
+/* tile (openlayers native) container */
+#map_container #tile_container { width: 100%; height: 100%; z-index: 10; overflow: hidden; }
+#map_container #tile_container .layer_object canvas { width: 100%; height: 100%; opacity:0; }
+/* canvas (webgl aerial.js) container */
+#map_container #canvas_container { position:absolute; width: 100%; height: 100%; z-index:0; overflow: hidden;  }
+#map_container #canvas_container #canvas_map { width: 100%; height: 100%; }
+
+/* #map_container #tile_container .layer_object div.ol-zoom { left: 8%; top: 10%; } */
